# zig-cmake-quickstart

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.zig  hello.zig
